--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -174,5 +174,29 @@
     "tagalog": "التاغالوغية",
     "hindi": "الهندية",
     "thai": "التايلاندية",
-    "arabic": "العربية"
+    "arabic": "العربية",
+    "subtypesAndVariations": "الأنواع الفرعية والتغيرات المورفولوجية",
+    "largeGranularLymphocytesLGL": "الخلايا الليمفاوية الحبيبية الكبيرة (LGL)",
+    "largeGranularLymphocytesLGLDescription": "أكبر من الخلايا الليمفاوية النموذجية، ولها سيتوبلازم وفير، أزرق شاحب، مع حبيبات أزيروفيلية (ليزوزومات).\nالنواة بيضاوية أو مستديرة، مع كروماتين مكثف.\nيمكن أن تكون خلايا ليمفاوية تائية سامة للخلايا (CD8⁺) أو خلايا قاتلة طبيعية.\nتزداد في حالات العدوى الفيروسية، وأمراض المناعة الذاتية، وبعد استئصال الطحال، وفي ابيضاض الدم الليمفاوي الحبيبي.",
+    "reactiveOrActivatedLymphocytes": "الخلايا الليمفاوية التفاعلية (أو المنشطة)",
+    "reactiveOrActivatedLymphocytesDescription": "خلايا كبيرة، ذات كروماتين أقل تكثفًا وسيتوبلازم قاعدي قد يبدو وكأنه “يحتضن” خلايا الدم الحمراء.\nتسمى أيضًا خلايا داوني من النوع الثاني.\nتنشأ استجابة لعمليات معدية أو التهابية، كما في عدد كريات الدم البيضاء المعدية (فيروس إبشتاين-بار) والتهابات فيروسية أخرى.",
+    "neoplasticClonalLymphocytes": "الخلايا الليمفاوية الورمية (النسيلية)",
+    "neoplasticClonalLymphocytesDescription": "لها نواة مستديرة، وكروماتين كثيف، وسيتوبلازم ضئيل.\nمرتبطة بالأورام التكاثرية اللمفاوية (مثل ابيضاض الدم الليمفاوي المزمن، والأورام اللمفاوية، والورم النقوي المتعدد).\nيتطلب تحديدها الدقيق التنميط المناعي عن طريق قياس التدفق الخلوي.",
+    "atypicalLymphocytes": "الخلايا الليمفاوية غير النمطية",
+    "atypicalLymphocytesDescription": "تشمل أشكالًا تفاعلية أو ورمية أو خبيثة غير محددة.\nتظهر تغيرات مورفولوجية لا تتناسب مع الأنماط النموذجية، وقد تختلف في الحجم والشكل ونسبة النواة إلى السيتوبلازم.\nيتم الإبلاغ عنها عند الشك في وجود تنشيط مناعي شديد، أو تكاثر نسيلي أولي، أو تحول ورمي محتمل.\nيجب تفسيرها بحذر وربطها بالنتائج السريرية والمخبرية.",
+    "plasmaCells": "خلايا البلازما",
+    "plasmaCellsDescription": "خلايا مشتقة من الخلايا الليمفاوية البائية المتمايزة.\nلها نواة غريبة الأطوار، وكروماتين “عجلة العربة”، وسيتوبلازم قاعدي بقوة مع هالة حول النواة (جهاز جولجي).\nلا تظهر في الدم المحيطي الطبيعي.\nيمكن أن تظهر في الورم النقوي المتعدد، والالتهابات المزمنة، أو بعد إطلاق IL-6.",
+    "lymphocytesWithCleavedNucleus": "الخلايا الليمفاوية ذات النواة المشقوقة",
+    "lymphocytesWithCleavedNucleusDescription": "صغيرة، ذات سيتوبلازم ضئيل وقاعدي قليلاً.\nتظهر النواة شقًا أو فجوة أو شقًا.\nتوجد في سرطان الغدد الليمفاوية الجريبي (النسيلي) وعدوى المستدمية الديكية (التفاعلية).",
+    "villousLymphocytes": "الخلايا الليمفاوية الزغابية",
+    "villousLymphocytesDescription": "ناضجة وصغيرة، ذات نواة بيضاوية وكروماتين مضغوط.\nالسيتوبلازم قاعدي قليلاً وله زغابات في أحد طرفيه أو كليهما.\nمرتبطة بسرطان الغدد الليمفاوية في المنطقة الهامشية الطحالية.",
+    "hairyCells": "الخلايا المشعرة",
+    "hairyCellsDescription": "لها سيتوبلازم وفير وقاعدي مع نتوءات سيتوبلازمية غير منتظمة (“شعيرات”).\nنواة بيضاوية أو مستديرة أو ثنائية الفصوص، مع كروماتين فضفاض.\nنموذجية لابيضاض الدم المشعر الخلايا.",
+    "mottCells": "خلايا موت",
+    "mottCellsDescription": "خلايا بلازما تحتوي على شوائب كروية في السيتوبلازم (حويصلات مليئة بالغلوبولينات المناعية).\nتظهر في كثرة البلازما التفاعلية، والورم النقوي المتعدد، والأورام اللمفاوية للخلايا البائية الكبيرة.",
+    "flowerCells": "الخلايا الزهرية (Flower cells)",
+    "flowerCellsDescription": "لها نواة غير منتظمة، ملتوية، ذات مظهر يشبه الزهرة.\nيظهر بعضها نويات واضحة.\nتوجد في ابيضاض الدم/سرطان الغدد الليمفاوية للخلايا التائية البالغة، المرتبط بفيروس HTLV-1.",
+    "pleomorphicLymphocytes": "الخلايا الليمفاوية متعددة الأشكال",
+    "pleomorphicLymphocytesDescription": "تظهر تباينًا في الحجم والشكل ونسبة النواة إلى السيتوبلازم.\nالكروماتين أقل تكثفًا ويمكن أن تشبه الأرومات.\nشائعة في الأورام اللمفاوية غير الهودجكينية، وابيضاض الدم الليمفاوي المزمن غير النمطي، وابيضاض الدم الطليعي.",
+    "cytoplasmicInclusionsTitle": "الاحتباسات السيتوبلازمية"
 }
