--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -173,6 +173,30 @@
     "cellName": "Zellenname",
     "tagalog": "Tagalog",
     "hindi": "Hindi",
-    "thai": "Thai",
-    "arabic": "Arabisch"
+    "thai": "Thailändisch",
+    "arabic": "Arabisch",
+    "subtypesAndVariations": "Subtypen und morphologische Variationen",
+    "largeGranularLymphocytesLGL": "Große granuläre Lymphozyten (LGL)",
+    "largeGranularLymphocytesLGLDescription": "Größer als typische Lymphozyten, haben sie ein reichliches, blassblaues Zytoplasma mit azurophilen Granula (Lysosomen).\nDer Kern ist oval oder rund, mit kondensiertem Chromatin.\nSie können zytotoxische T-Lymphozyten (CD8⁺) oder NK-Zellen sein.\nSie sind bei Virusinfektionen, Autoimmunerkrankungen, nach Splenektomie und bei granulozytärer lymphatischer Leukämie erhöht.",
+    "reactiveOrActivatedLymphocytes": "Reaktive (oder aktivierte) Lymphozyten",
+    "reactiveOrActivatedLymphocytesDescription": "Große Zellen mit weniger kondensiertem Chromatin und basophilem Zytoplasma, das rote Blutkörperchen zu “umarmen” scheint.\nAuch als Downey-Typ-II-Zellen bezeichnet.\nSie treten als Reaktion auf infektiöse oder entzündliche Prozesse auf, wie bei infektiöser Mononukleose (Epstein-Barr-Virus) und anderen Virusinfektionen.",
+    "neoplasticClonalLymphocytes": "Neoplastische (klonale) Lymphozyten",
+    "neoplasticClonalLymphocytesDescription": "Sie haben einen runden Kern, dichtes Chromatin und spärliches Zytoplasma.\nIm Zusammenhang mit lymphoproliferativen Neoplasien (wie CLL, Lymphomen und multiplem Myelom).\nEine genaue Identifizierung erfordert eine Immunphänotypisierung durch Durchflusszytometrie.",
+    "atypicalLymphocytes": "Atypische Lymphozyten",
+    "atypicalLymphocytesDescription": "Sie umfassen reaktive, neoplastische oder unbestimmte Malignitätsformen.\nSie weisen morphologische Veränderungen auf, die nicht in typische Muster passen und in Größe, Form und Kern-Zytoplasma-Verhältnis variieren können.\nSie werden bei Verdacht auf intensive immunologische Aktivierung, beginnende klonale Proliferation oder mögliche neoplastische Transformation berichtet.\nSie sollten mit Vorsicht interpretiert und mit klinischen und Laborbefunden korreliert werden.",
+    "plasmaCells": "Plasmazellen",
+    "plasmaCellsDescription": "Zellen, die von differenzierten B-Lymphozyten abstammen.\nSie haben einen exzentrischen Kern, “Radspeichen”-Chromatin und stark basophiles Zytoplasma mit einem perinukleären Halo (Golgi-Komplex).\nSie kommen nicht im normalen peripheren Blut vor.\nSie können bei multiplem Myelom, chronischen Entzündungen oder nach Freisetzung von IL-6 auftreten.",
+    "lymphocytesWithCleavedNucleus": "Lymphozyten mit gespaltenem Kern",
+    "lymphocytesWithCleavedNucleusDescription": "Klein, mit spärlichem und leicht basophilem Zytoplasma.\nDer Kern weist eine Spalte, Einkerbung oder Fissur auf.\nGefunden bei follikulärem Lymphom (klonal) und Bordetella pertussis-Infektion (reaktiv).",
+    "villousLymphocytes": "Villi-Lymphozyten",
+    "villousLymphocytesDescription": "Reif und klein, mit einem ovalen Kern und kompaktiertem Chromatin.\nDas Zytoplasma ist leicht basophil und weist an einem oder beiden Enden Villi auf.\nAssoziiert mit dem splenischen Marginalzonen-Lymphom.",
+    "hairyCells": "Haarzellen",
+    "hairyCellsDescription": "Sie haben ein reichliches und basophiles Zytoplasma mit unregelmäßigen zytoplasmatischen Projektionen (“Haaren”).\nOvaler, runder oder bilobierter Kern mit lockerem Chromatin.\nTypisch für die Haarzell-Leukämie.",
+    "mottCells": "Mott-Zellen",
+    "mottCellsDescription": "Plasmazellen, die sphärische Einschlüsse im Zytoplasma enthalten (Vesikel gefüllt mit Immunglobulinen).\nSie treten bei reaktiver Plasmozytose, multiplem Myelom und großen B-Zell-Lymphomen auf.",
+    "flowerCells": "Blumenzellen (Flower cells)",
+    "flowerCellsDescription": "Sie haben einen unregelmäßigen, gewundenen Kern mit einem blumenähnlichen Aussehen.\nEinige zeigen deutliche Nukleoli.\nGefunden bei adulter T-Zell-Leukämie/Lymphom, assoziiert mit dem HTLV-1-Virus.",
+    "pleomorphicLymphocytes": "Pleomorphe Lymphozyten",
+    "pleomorphicLymphocytesDescription": "Sie zeigen eine Variation in Größe, Form und Kern-Zytoplasma-Verhältnis.\nDas Chromatin ist weniger kondensiert und sie können Blasten ähneln.\nHäufig bei Non-Hodgkin-Lymphomen, atypischer CLL und prolymphozytischer Leukämie.",
+    "cytoplasmicInclusionsTitle": "Zytoplasmatische Einschlüsse"
 }
