--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -174,5 +174,29 @@
     "tagalog": "Tagalog",
     "hindi": "Hindi",
     "thai": "Thai",
-    "arabic": "Arabic"
+    "arabic": "Arabic",
+    "subtypesAndVariations": "Subtypes and morphological variations",
+    "largeGranularLymphocytesLGL": "Large granular lymphocytes (LGL)",
+    "largeGranularLymphocytesLGLDescription": "Larger than typical lymphocytes, they have abundant, pale blue cytoplasm with azurophilic granules (lysosomes).\nThe nucleus is oval or round, with condensed chromatin.\nThey can be cytotoxic T lymphocytes (CD8⁺) or NK cells.\nThey are increased in viral infections, autoimmune diseases, after splenectomy, and in granular lymphocytic leukemia.",
+    "reactiveOrActivatedLymphocytes": "Reactive (or activated) lymphocytes",
+    "reactiveOrActivatedLymphocytesDescription": "Large cells, with less condensed chromatin and basophilic cytoplasm that may appear to “hug” red blood cells.\nAlso called Downey type II cells.\nThey arise in response to infectious or inflammatory processes, such as in infectious mononucleosis (Epstein–Barr virus) and other viral infections.",
+    "neoplasticClonalLymphocytes": "Neoplastic (clonal) lymphocytes",
+    "neoplasticClonalLymphocytesDescription": "They have a round nucleus, dense chromatin, and scarce cytoplasm.\nRelated to lymphoproliferative neoplasms (such as CLL, lymphomas, and multiple myeloma).\nAccurate identification requires immunophenotyping by flow cytometry.",
+    "atypicalLymphocytes": "Atypical lymphocytes",
+    "atypicalLymphocytesDescription": "They include reactive, neoplastic, or indeterminate malignancy forms.\nThey present morphological changes that do not fit typical patterns, and may vary in size, shape, and nucleus-cytoplasm ratio.\nThey are reported when there is suspicion of intense immunological activation, incipient clonal proliferation, or possible neoplastic transformation.\nThey should be interpreted with caution and correlated with clinical and laboratory findings.",
+    "plasmaCells": "Plasma cells",
+    "plasmaCellsDescription": "Cells derived from differentiated B lymphocytes.\nThey have an eccentric nucleus, “cartwheel” chromatin, and strongly basophilic cytoplasm with a perinuclear halo (Golgi complex).\nThey do not appear in normal peripheral blood.\nThey can appear in multiple myeloma, chronic inflammation, or after IL-6 release.",
+    "lymphocytesWithCleavedNucleus": "Lymphocytes with cleaved nucleus",
+    "lymphocytesWithCleavedNucleusDescription": "Small, with scarce and slightly basophilic cytoplasm.\nThe nucleus has a cleft, indentation, or fissure.\nFound in follicular lymphoma (clonal) and Bordetella pertussis infection (reactional).",
+    "villousLymphocytes": "Villous lymphocytes",
+    "villousLymphocytesDescription": "Mature and small, with an oval nucleus and compacted chromatin.\nThe cytoplasm is slightly basophilic and has villi at one or both ends.\nAssociated with splenic marginal zone lymphoma.",
+    "hairyCells": "Hairy cells",
+    "hairyCellsDescription": "They have abundant and basophilic cytoplasm with irregular cytoplasmic projections (“hairs”).\nOval, round, or bilobed nucleus, with loose chromatin.\nTypical of hairy cell leukemia.",
+    "mottCells": "Mott cells",
+    "mottCellsDescription": "Plasma cells that contain spherical inclusions in the cytoplasm (vesicles filled with immunoglobulins).\nThey appear in reactive plasmacytosis, multiple myeloma, and large B-cell lymphomas.",
+    "flowerCells": "Flower cells",
+    "flowerCellsDescription": "They have an irregular, convoluted nucleus, with a flower-like appearance.\nSome show evident nucleoli.\nFound in adult T-cell leukemia/lymphoma, associated with the HTLV-1 virus.",
+    "pleomorphicLymphocytes": "Pleomorphic lymphocytes",
+    "pleomorphicLymphocytesDescription": "They show variation in size, shape, and nucleus-cytoplasm ratio.\nThe chromatin is less condensed and they can resemble blasts.\nCommon in non-Hodgkin lymphomas, atypical CLL, and prolymphocytic leukemia.",
+    "cytoplasmicInclusionsTitle": "Cytoplasmic Inclusions"
 }
