--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -173,5 +173,29 @@
     "tagalog": "Tagalog",
     "hindi": "Hindi",
     "thai": "Thaï",
-    "arabic": "Arabe"
+    "arabic": "Arabe",
+    "subtypesAndVariations": "Sous-types et variations morphologiques",
+    "largeGranularLymphocytesLGL": "Grands lymphocytes granuleux (LGL)",
+    "largeGranularLymphocytesLGLDescription": "Plus grands que les lymphocytes typiques, ils présentent un cytoplasme abondant, bleu pâle, avec des granulations azurophiles (lysosomes).\nLe noyau est ovale ou rond, avec une chromatine condensée.\nIls peuvent être des lymphocytes T cytotoxiques (CD8⁺) ou des cellules NK.\nIls sont augmentés dans les infections virales, les maladies auto-immunes, après une splénectomie et dans la leucémie lymphoïde granulaire.",
+    "reactiveOrActivatedLymphocytes": "Lymphocytes réactifs (ou activés)",
+    "reactiveOrActivatedLymphocytesDescription": "Grandes cellules, avec une chromatine moins condensée et un cytoplasme basophile qui peut sembler “entourer” les hématies.\nÉgalement appelées cellules de Downey de type II.\nIls apparaissent en réponse à des processus infectieux ou inflammatoires, comme dans la mononucléose infectieuse (virus d'Epstein-Barr) et d'autres infections virales.",
+    "neoplasticClonalLymphocytes": "Lymphocytes néoplasiques (clonaux)",
+    "neoplasticClonalLymphocytesDescription": "Ils présentent un noyau rond, une chromatine dense et un cytoplasme rare.\nLiés aux néoplasies lymphoprolifératives (comme la LLC, les lymphomes et le myélome multiple).\nL'identification précise nécessite une immunophénotypage par cytométrie en flux.",
+    "atypicalLymphocytes": "Lymphocytes atypiques",
+    "atypicalLymphocytesDescription": "Ils englobent des formes réactives, néoplasiques ou de malignité indéterminée.\nIls présentent des altérations morphologiques qui ne correspondent pas aux modèles typiques, pouvant varier en taille, forme et rapport noyau-cytoplasme.\nIls sont signalés en cas de suspicion d'activation immunologique intense, de prolifération clonale naissante ou de possible transformation néoplasique.\nIls doivent être interprétés avec prudence et corrélés avec les résultats cliniques et de laboratoire.",
+    "plasmaCells": "Plasmocytes",
+    "plasmaCellsDescription": "Cellules dérivées de lymphocytes B différenciés.\nIls possèdent un noyau excentrique, une chromatine en “rayons de roue” et un cytoplasme fortement basophile avec un halo périnucléaire (appareil de Golgi).\nIls n'apparaissent pas dans le sang périphérique normal.\nIls peuvent apparaître dans le myélome multiple, les inflammations chroniques ou après la libération d'IL-6.",
+    "lymphocytesWithCleavedNucleus": "Lymphocytes à noyau clivé",
+    "lymphocytesWithCleavedNucleusDescription": "Petits, avec un cytoplasme rare et légèrement basophile.\nLe noyau présente une fente, une indentation ou une fissure.\nTrouvés dans le lymphome folliculaire (clonal) et l'infection par Bordetella pertussis (réactionnelle).",
+    "villousLymphocytes": "Lymphocytes villeux",
+    "villousLymphocytesDescription": "Matures et petits, avec un noyau ovale et une chromatine compactée.\nLe cytoplasme est légèrement basophile et présente des villosités à une ou aux deux extrémités.\nAssociés au lymphome de la zone marginale splénique.",
+    "hairyCells": "Cellules chevelues",
+    "hairyCellsDescription": "Ils présentent un cytoplasme abondant et basophile avec des projections cytoplasmiques irrégulières (“poils”).\nNoyau ovale, rond ou bilobé, avec une chromatine lâche.\nTypiques de la tricholeucémie.",
+    "mottCells": "Cellules de Mott",
+    "mottCellsDescription": "Plasmocytes contenant des inclusions sphériques dans le cytoplasme (vésicules remplies d'immunoglobulines).\nApparaissent dans la plasmocytose réactive, le myélome multiple et les lymphomes à grandes cellules B.",
+    "flowerCells": "Cellules en fleur (Flower cells)",
+    "flowerCellsDescription": "Ils présentent un noyau irrégulier, convoluté, avec un aspect de fleur.\nCertains montrent des nucléoles évidents.\nTrouvés dans la leucémie/lymphome à cellules T de l'adulte, associés au virus HTLV-1.",
+    "pleomorphicLymphocytes": "Lymphocytes pléomorphes",
+    "pleomorphicLymphocytesDescription": "Ils présentent une variation de taille, de forme et de proportion noyau-cytoplasme.\nLa chromatine est moins condensée et ils peuvent ressembler à des blastes.\nCommuns dans les lymphomes non hodgkiniens, la LLC atypique et la leucémie prolymphocytaire.",
+    "cytoplasmicInclusionsTitle": "Inclusions cytoplasmiques"
 }
