--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -174,5 +174,29 @@
     "tagalog": "तागालोग",
     "hindi": "हिंदी",
     "thai": "थाई",
-    "arabic": "अरबी"
+    "arabic": "अरबी",
+    "subtypesAndVariations": "उपप्रकार और रूपात्मक विविधताएं",
+    "largeGranularLymphocytesLGL": "बड़े दानेदार लिम्फोसाइट्स (LGL)",
+    "largeGranularLymphocytesLGLDescription": "विशिष्ट लिम्फोसाइटों से बड़े, इनमें प्रचुर, हल्के नीले रंग का साइटोप्लाज्म होता है जिसमें एज़ुरोफिलिक कणिकाएं (लाइसोसोम) होती हैं।\nनाभिक अंडाकार या गोल होता है, जिसमें संघनित क्रोमेटिन होता है।\nये साइटोटॉक्सिक टी लिम्फोसाइट्स (CD8⁺) या एनके कोशिकाएं हो सकती हैं।\nये वायरल संक्रमण, ऑटोइम्यून बीमारियों, स्प्लेनेक्टोमी के बाद और दानेदार लिम्फोसाइटिक ल्यूकेमिया में बढ़ जाते हैं।",
+    "reactiveOrActivatedLymphocytes": "प्रतिक्रियाशील (या सक्रिय) लिम्फोसाइट्स",
+    "reactiveOrActivatedLymphocytesDescription": "बड़ी कोशिकाएं, जिनमें कम संघनित क्रोमेटिन और बेसोफिलिक साइटोप्लाज्म होता है जो लाल रक्त कोशिकाओं को “गले” लगाता हुआ प्रतीत हो सकता है।\nइन्हें डाउनी टाइप II कोशिकाएं भी कहा जाता है।\nये संक्रामक या सूजन प्रक्रियाओं की प्रतिक्रिया में उत्पन्न होते हैं, जैसे कि संक्रामक मोनोन्यूक्लिओसिस (एपस्टीन-बार वायरस) और अन्य वायरल संक्रमणों में।",
+    "neoplasticClonalLymphocytes": "नियोप्लास्टिक (क्लोनल) लिम्फोसाइट्स",
+    "neoplasticClonalLymphocytesDescription": "इनमें एक गोल नाभिक, घना क्रोमेटिन और दुर्लभ साइटोप्लाज्म होता है।\nलिम्फोप्रोलिफेरेटिव नियोप्लाज्म (जैसे सीएलएल, लिम्फोमा और मल्टीपल मायलोमा) से संबंधित।\nसटीक पहचान के लिए फ्लो साइटोमेट्री द्वारा इम्यूनोफेनोटाइपिंग की आवश्यकता होती है।",
+    "atypicalLymphocytes": "असामान्य लिम्फोसाइट्स",
+    "atypicalLymphocytesDescription": "इनमें प्रतिक्रियाशील, नियोप्लास्टिक या अनिश्चित घातक रूप शामिल हैं।\nये रूपात्मक परिवर्तन प्रस्तुत करते हैं जो विशिष्ट पैटर्न में फिट नहीं होते हैं, और आकार, आकार और नाभिक-साइटोप्लाज्म अनुपात में भिन्न हो सकते हैं।\nइनकी सूचना तब दी जाती है जब तीव्र प्रतिरक्षा सक्रियण, प्रारंभिक क्लोनल प्रसार या संभावित नियोप्लास्टिक परिवर्तन का संदेह होता है।\nइनकी सावधानी से व्याख्या की जानी चाहिए और नैदानिक ​​और प्रयोगशाला निष्कर्षों के साथ सहसंबद्ध किया जाना चाहिए।",
+    "plasmaCells": "प्लाज्मा कोशिकाएं",
+    "plasmaCellsDescription": "विभेदित बी लिम्फोसाइटों से प्राप्त कोशिकाएं।\nइनमें एक विलक्षण नाभिक, “कार्टव्हील” क्रोमेटिन और एक पेरिन्यूक्लियर प्रभामंडल (गोल्गी कॉम्प्लेक्स) के साथ दृढ़ता से बेसोफिलिक साइटोप्लाज्म होता है।\nये सामान्य परिधीय रक्त में दिखाई नहीं देते हैं।\nये मल्टीपल मायलोमा, पुरानी सूजन या IL-6 रिलीज के बाद दिखाई दे सकते हैं।",
+    "lymphocytesWithCleavedNucleus": "विभाजित नाभिक वाले लिम्फोसाइट्स",
+    "lymphocytesWithCleavedNucleusDescription": "छोटे, दुर्लभ और थोड़े बेसोफिलिक साइटोप्लाज्म के साथ।\nनाभिक में एक फांक, इंडेंटेशन या विदर होता है।\nफॉलिक्युलर लिम्फोमा (क्लोनल) और बोर्डेटेला पर्टुसिस संक्रमण (प्रतिक्रियात्मक) में पाया जाता है।",
+    "villousLymphocytes": "विल्स लिम्फोसाइट्स",
+    "villousLymphocytesDescription": "परिपक्व और छोटे, एक अंडाकार नाभिक और संकुचित क्रोमेटिन के साथ।\nसाइटोप्लाज्म थोड़ा बेसोफिलिक होता है और एक या दोनों सिरों पर विली होता है।\nस्प्लेनिक सीमांत क्षेत्र लिम्फोमा से जुड़ा हुआ है।",
+    "hairyCells": "बालों वाली कोशिकाएं",
+    "hairyCellsDescription": "इनमें अनियमित साइटोप्लाज्मिक अनुमानों (“बालों”) के साथ प्रचुर और बेसोफिलिक साइटोप्लाज्म होता है।\nअंडाकार, गोल या बिलोब्ड नाभिक, ढीले क्रोमेटिन के साथ।\nबालों वाली कोशिका ल्यूकेमिया का विशिष्ट।",
+    "mottCells": "मॉट कोशिकाएं",
+    "mottCellsDescription": "प्लाज्मा कोशिकाएं जिनमें साइटोप्लाज्म में गोलाकार समावेशन होते हैं (इम्युनोग्लोबुलिन से भरे पुटिका)।\nये प्रतिक्रियाशील प्लास्मोसाइटोसिस, मल्टीपल मायलोमा और बड़े बी-सेल लिम्फोमा में दिखाई देते हैं।",
+    "flowerCells": "फूल कोशिकाएं (Flower cells)",
+    "flowerCellsDescription": "इनमें एक अनियमित, जटिल नाभिक होता है, जिसमें फूल जैसा रूप होता है।\nकुछ में स्पष्ट न्यूक्लियोली दिखाई देती है।\nवयस्क टी-सेल ल्यूकेमिया/लिम्फोमा में पाया जाता है, जो HTLV-1 वायरस से जुड़ा है।",
+    "pleomorphicLymphocytes": "प्लीओमोर्फिक लिम्फोसाइट्स",
+    "pleomorphicLymphocytesDescription": "ये आकार, आकार और नाभिक-साइटोप्लाज्म अनुपात में भिन्नता दिखाते हैं।\nक्रोमेटिन कम संघनित होता है और ये विस्फोटों से मिलते जुलते हो सकते हैं।\nगैर-हॉजकिन लिम्फोमा, असामान्य सीएलएल और प्रोलिम्फोसाइटिक ल्यूकेमिया में आम है।",
+    "cytoplasmicInclusionsTitle": "साइटोप्लाज्मिक समावेशन"
 }
