--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -173,6 +173,30 @@
     "cellName": "Nome della cellula",
     "tagalog": "Tagalog",
     "hindi": "Hindi",
-    "thai": "Thai",
-    "arabic": "Arabic"
+    "thai": "Tailandese",
+    "arabic": "Arabo",
+    "subtypesAndVariations": "Sottotipi e variazioni morfologiche",
+    "largeGranularLymphocytesLGL": "Linfociti grandi e granulari (LGL)",
+    "largeGranularLymphocytesLGLDescription": "Più grandi dei linfociti tipici, presentano un citoplasma abbondante, di colore blu pallido, con granuli azzurrofili (lisosomi).\nIl nucleo è ovale o rotondo, con cromatina condensata.\nPossono essere linfociti T citotossici (CD8⁺) o cellule NK.\nSono aumentati nelle infezioni virali, nelle malattie autoimmuni, dopo la splenectomia e nella leucemia linfocitica granulare.",
+    "reactiveOrActivatedLymphocytes": "Linfociti reattivi (o attivati)",
+    "reactiveOrActivatedLymphocytesDescription": "Cellule grandi, con cromatina meno condensata e citoplasma basofilo che può sembrare “abbracciare” i globuli rossi.\nChiamate anche cellule di Downey di tipo II.\nCompaiono in risposta a processi infettivi o infiammatori, come nella mononucleosi infettiva (virus di Epstein-Barr) e in altre infezioni virali.",
+    "neoplasticClonalLymphocytes": "Linfociti neoplastici (clonali)",
+    "neoplasticClonalLymphocytesDescription": "Presentano un nucleo rotondo, cromatina densa e citoplasma scarso.\nCorrelati a neoplasie linfoproliferative (come LLC, linfomi e mieloma multiplo).\nL'identificazione precisa richiede l'immunofenotipizzazione mediante citometria a flusso.",
+    "atypicalLymphocytes": "Linfociti atipici",
+    "atypicalLymphocytesDescription": "Comprendono forme reattive, neoplastiche o di malignità indeterminata.\nPresentano alterazioni morfologiche che non rientrano nei modelli tipici, potendo variare in dimensioni, forma e rapporto nucleo-citoplasma.\nSono segnalati in caso di sospetta intensa attivazione immunologica, proliferazione clonale incipiente o possibile trasformazione neoplastica.\nDevono essere interpretati con cautela e correlati con i dati clinici e di laboratorio.",
+    "plasmaCells": "Plasmacellule",
+    "plasmaCellsDescription": "Cellule derivate da linfociti B differenziati.\nPossiedono un nucleo eccentrico, cromatina a “ruota di carro” e citoplasma fortemente basofilo con alone perinucleare (complesso di Golgi).\nNon compaiono nel sangue periferico normale.\nPossono comparire nel mieloma multiplo, nelle infiammazioni croniche o dopo il rilascio di IL-6.",
+    "lymphocytesWithCleavedNucleus": "Linfociti con nucleo clivato",
+    "lymphocytesWithCleavedNucleusDescription": "Piccoli, con citoplasma scarso e leggermente basofilo.\nIl nucleo presenta una fessura, un'indentatura o una scissura.\nRiscontrati nel linfoma follicolare (clonale) e nell'infezione da Bordetella pertussis (reazionale).",
+    "villousLymphocytes": "Linfociti villosi",
+    "villousLymphocytesDescription": "Maturo e piccolo, con nucleo ovale e cromatina compattata.\nIl citoplasma è leggermente basofilo e presenta villosità a una o entrambe le estremità.\nAssociati al linfoma della zona marginale splenica.",
+    "hairyCells": "Cellule capellute",
+    "hairyCellsDescription": "Presentano un citoplasma abbondante e basofilo con proiezioni citoplasmatiche irregolari (“peli”).\nNucleo ovale, rotondo o bilobato, con cromatina lassa.\nTipiche della tricoleucemia.",
+    "mottCells": "Cellule di Mott",
+    "mottCellsDescription": "Plasmacellule che contengono inclusioni sferiche nel citoplasma (vescicole piene di immunoglobuline).\nCompaiono nella plasmacitosi reattiva, nel mieloma multiplo e nei linfomi a grandi cellule B.",
+    "flowerCells": "Cellule a fiore (Flower cells)",
+    "flowerCellsDescription": "Presentano un nucleo irregolare, convoluto, con un aspetto a fiore.\nAlcune mostrano nucleoli evidenti.\nRiscontrate nella leucemia/linfoma a cellule T dell'adulto, associate al virus HTLV-1.",
+    "pleomorphicLymphocytes": "Linfociti pleomorfi",
+    "pleomorphicLymphocytesDescription": "Presentano una variazione di dimensioni, forma e proporzione nucleo-citoplasma.\nLa cromatina è meno condensata e possono assomigliare a blasti.\nComuni nei linfomi non Hodgkin, nella LLC atipica e nella leucemia prolinfocitica.",
+    "cytoplasmicInclusionsTitle": "Inclusioni citoplasmatiche"
 }
