--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -175,5 +175,29 @@
     "tagalog": "Tagalo",
     "hindi": "Hindi",
     "thai": "Tailandês",
-    "arabic": "Árabe"
+    "arabic": "Árabe",
+    "subtypesAndVariations": "Subtipos e variações morfológicas",
+    "largeGranularLymphocytesLGL": "Linfócitos grandes e granulares (LGL)",
+    "largeGranularLymphocytesLGLDescription": "Maiores que os linfócitos típicos, apresentam citoplasma abundante, azul pálido, com grânulos azurofílicos (lisossomos).\nO núcleo é oval ou redondo, com cromatina condensada.\nPodem ser linfócitos T citotóxicos (CD8⁺) ou células NK.\nEstão aumentados em infecções virais, doenças autoimunes, após esplenectomia e na leucemia linfocítica granular.",
+    "reactiveOrActivatedLymphocytes": "Linfócitos reativos (ou ativados)",
+    "reactiveOrActivatedLymphocytesDescription": "Células grandes, com cromatina menos condensada e citoplasma basofílico que pode parecer “abraçar” hemácias.\nTambém chamados de células de Downey tipo II.\nSurgem em resposta a processos infecciosos ou inflamatórios, como na mononucleose infecciosa (vírus Epstein–Barr) e outras infecções virais.",
+    "neoplasticClonalLymphocytes": "Linfócitos neoplásicos (clonais)",
+    "neoplasticClonalLymphocytesDescription": "Apresentam núcleo redondo, cromatina densa e citoplasma escasso.\nRelacionados a neoplasias linfoproliferativas (como LLC, linfomas e mieloma múltiplo).\nA identificação precisa requer imunofenotipagem por citometria de fluxo.",
+    "atypicalLymphocytes": "Linfócitos atípicos",
+    "atypicalLymphocytesDescription": "Englobam formas reativas, neoplásicas ou de malignidade indeterminada.\nApresentam alterações morfológicas que não se enquadram em padrões típicos, podendo variar em tamanho, forma e relação núcleo-citoplasma.\nSão relatados quando há suspeita de ativação imunológica intensa, proliferação clonal incipiente ou possível transformação neoplásica.\nDevem ser interpretados com cautela e correlacionados com achados clínicos e laboratoriais.",
+    "plasmaCells": "Plasmócitos",
+    "plasmaCellsDescription": "Células derivadas de linfócitos B diferenciados.\nPossuem núcleo excêntrico, cromatina em “raios de carroça” e citoplasma fortemente basofílico com halo perinuclear (complexo de Golgi).\nNão aparecem em sangue periférico normal.\nPodem surgir no mieloma múltiplo, inflamações crônicas ou após liberação de IL-6.",
+    "lymphocytesWithCleavedNucleus": "Linfócitos com núcleo clivado",
+    "lymphocytesWithCleavedNucleusDescription": "Pequenos, com citoplasma escasso e levemente basofílico.\nO núcleo apresenta fenda, indentação ou fissura.\nEncontrados em linfoma folicular (clonal) e infecção por Bordetella pertussis (reacional).",
+    "villousLymphocytes": "Linfócitos vilosos",
+    "villousLymphocytesDescription": "Maduros e pequenos, com núcleo oval e cromatina compactada.\nO citoplasma é levemente basofílico e apresenta vilosidades em uma ou ambas as extremidades.\nAssociados ao linfoma de zona marginal esplênico.",
+    "hairyCells": "Células pilosas",
+    "hairyCellsDescription": "Apresentam citoplasma abundante e basofílico com projeções citoplasmáticas irregulares (“pelos”).\nNúcleo oval, redondo ou bilobado, com cromatina frouxa.\nTípicas da tricoleucemia.",
+    "mottCells": "Células de Mott",
+    "mottCellsDescription": "Plasmócitos que contêm inclusões esféricas no citoplasma (vesículas repletas de imunoglobulinas).\nAparecem na plasmocitose reativa, mieloma múltiplo e linfomas de grandes células B.",
+    "flowerCells": "Células em flor (Flower cells)",
+    "flowerCellsDescription": "Apresentam núcleo irregular, convoluto, com aspecto de flor.\nAlgumas exibem nucléolos evidentes.\nEncontradas em leucemia/linfoma de células T do adulto, associadas ao vírus HTLV-1.",
+    "pleomorphicLymphocytes": "Linfócitos pleomórficos",
+    "pleomorphicLymphocytesDescription": "Apresentam variação de tamanho, forma e proporção núcleo-citoplasma.\nA cromatina é menos condensada e podem lembrar blastos.\nComuns em linfomas não Hodgkin, LLC atípica e leucemia prolinfocítica.",
+    "cytoplasmicInclusionsTitle": "Inclusões citoplasmáticas"
 }
