--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -174,5 +174,29 @@
     "tagalog": "ตากาล็อก",
     "hindi": "ฮินดี",
     "thai": "ไทย",
-    "arabic": "อาหรับ"
+    "arabic": "อาหรับ",
+    "subtypesAndVariations": "ชนิดย่อยและการเปลี่ยนแปลงทางสัณฐานวิทยา",
+    "largeGranularLymphocytesLGL": "ลิมโฟไซต์ขนาดใหญ่ที่มีแกรนูล (LGL)",
+    "largeGranularLymphocytesLGLDescription": "มีขนาดใหญ่กว่าลิมโฟไซต์ทั่วไป มีไซโทพลาซึมสีฟ้าอ่อนจำนวนมาก และมีแกรนูลสีม่วงแดง (ไลโซโซม)\nนิวเคลียสเป็นรูปไข่หรือกลม มีโครมาตินที่จับตัวกันแน่น\nอาจเป็นเซลล์ลิมโฟไซต์ทีชนิดทำลายเซลล์ (CD8⁺) หรือเซลล์ NK\nพบจำนวนเพิ่มขึ้นในการติดเชื้อไวรัส โรคภูมิต้านตนเอง หลังการตัดม้าม และในมะเร็งเม็ดเลือดขาวชนิดลิมโฟไซต์แกรนูล",
+    "reactiveOrActivatedLymphocytes": "ลิมโฟไซต์ที่ถูกกระตุ้น (Reactive lymphocytes)",
+    "reactiveOrActivatedLymphocytesDescription": "เซลล์ขนาดใหญ่ มีโครมาตินที่จับตัวกันหลวมกว่าปกติ และไซโทพลาซึมติดสีน้ำเงิน ซึ่งอาจดูเหมือน “โอบกอด” เซลล์เม็ดเลือดแดง\nเรียกอีกอย่างว่าเซลล์ดาวนีย์ชนิดที่ 2 (Downey type II cells)\nเกิดขึ้นเพื่อตอบสนองต่อกระบวนการติดเชื้อหรือการอักเสบ เช่น ในโรคโมโนนิวคลีโอซิส (เชื้อไวรัสเอ็บสไตน์-บาร์) และการติดเชื้อไวรัสอื่นๆ",
+    "neoplasticClonalLymphocytes": "ลิมโฟไซต์ชนิดร้าย (Neoplastic lymphocytes)",
+    "neoplasticClonalLymphocytesDescription": "มีนิวเคลียสกลม โครมาตินจับตัวกันแน่น และไซโทพลาซึมน้อย\nเกี่ยวข้องกับเนื้องอกชนิดลิมโฟโพรลิเฟอเรทีฟ (เช่น มะเร็งเม็ดเลือดขาวชนิดลิมโฟไซต์เรื้อรัง, มะเร็งต่อมน้ำเหลือง และมัลติเพิลมัยอีโลมา)\nการระบุที่แม่นยำต้องใช้การตรวจด้วยวิธีอิมมูโนฟีโนไทป์ปิงโดยโฟลไซโตเมทรี",
+    "atypicalLymphocytes": "ลิมโฟไซต์ผิดปกติ (Atypical lymphocytes)",
+    "atypicalLymphocytesDescription": "ครอบคลุมทั้งเซลล์ที่ถูกกระตุ้น เซลล์ร้าย หรือเซลล์ที่มีแนวโน้มจะเป็นมะเร็งแต่ยังไม่ชัดเจน\nมีการเปลี่ยนแปลงทางสัณฐานวิทยาที่ไม่เข้ากับรูปแบบปกติ อาจแตกต่างกันในด้านขนาด รูปร่าง และอัตราส่วนของนิวเคลียสต่อไซโทพลาซึม\nรายงานเมื่อสงสัยว่ามีการกระตุ้นทางภูมิคุ้มกันอย่างรุนแรง การเพิ่มจำนวนของเซลล์โคลนในระยะเริ่มต้น หรือการเปลี่ยนแปลงไปเป็นเซลล์มะเร็ง\nควรตีความด้วยความระมัดระวังและสัมพันธ์กับผลการตรวจทางคลินิกและห้องปฏิบัติการ",
+    "plasmaCells": "พลาสมาเซลล์ (Plasma cells)",
+    "plasmaCellsDescription": "เซลล์ที่พัฒนามาจากลิมโฟไซต์บีที่เจริญเต็มที่\nมีนิวเคลียสอยู่ชิดขอบเซลล์ โครมาตินมีลักษณะคล้าย “ซี่ล้อเกวียน” และไซโทพลาซึมติดสีน้ำเงินเข้ม มีบริเวณใสรอบนิวเคลียส (กอลจิคอมเพล็กซ์)\nไม่พบในเลือดปกติ\nอาจพบในมัลติเพิลมัยอีโลมา การอักเสบเรื้อรัง หรือหลังการหลั่งของ IL-6",
+    "lymphocytesWithCleavedNucleus": "ลิมโฟไซต์ที่มีนิวเคลียสเว้า (Cleaved nucleus)",
+    "lymphocytesWithCleavedNucleusDescription": "เซลล์ขนาดเล็ก มีไซโทพลาซึมน้อยและติดสีน้ำเงินเล็กน้อย\nนิวเคลียสมีรอยเว้า รอยบาก หรือรอยแยก\nพบในมะเร็งต่อมน้ำเหลืองชนิดฟอลลิคูลาร์ (ชนิดโคลน) และการติดเชื้อ Bordetella pertussis (ชนิดตอบสนอง)",
+    "villousLymphocytes": "ลิมโฟไซต์ชนิดมีซี่ (Villous lymphocytes)",
+    "villousLymphocytesDescription": "เซลล์เจริญเต็มที่และมีขนาดเล็ก มีนิวเคลียสรูปไข่และโครมาตินจับตัวกันแน่น\nไซโทพลาซึมติดสีน้ำเงินเล็กน้อยและมีซี่ยื่นออกมาที่ปลายด้านหนึ่งหรือทั้งสองด้าน\nเกี่ยวข้องกับมะเร็งต่อมน้ำเหลืองชนิดมาร์จินัลโซนของม้าม",
+    "hairyCells": "เซลล์ขน (Hairy cells)",
+    "hairyCellsDescription": "มีไซโทพลาซึมจำนวนมากและติดสีน้ำเงิน มีส่วนยื่นของไซโทพลาซึมที่ไม่สม่ำเสมอ (“ขน”)\nนิวเคลียสเป็นรูปไข่ กลม หรือสองพู มีโครมาตินจับตัวกันหลวม\nเป็นลักษณะเฉพาะของมะเร็งเม็ดเลือดขาวชนิดเซลล์ขน",
+    "mottCells": "เซลล์มอตต์ (Mott cells)",
+    "mottCellsDescription": "พลาสมาเซลล์ที่มีอินคลูชันทรงกลมในไซโทพลาซึม (เวสิเคิลที่เต็มไปด้วยอิมมูโนโกลบูลิน)\nพบในภาวะพลาสมาเซลล์เพิ่มขึ้นจากการตอบสนอง, มัลติเพิลมัยอีโลมา และมะเร็งต่อมน้ำเหลืองชนิดบีเซลล์ขนาดใหญ่",
+    "flowerCells": "เซลล์ดอกไม้ (Flower cells)",
+    "flowerCellsDescription": "มีนิวเคลียสที่ไม่สม่ำเสมอ บิดเบี้ยว มีลักษณะคล้ายดอกไม้\nบางเซลล์มีนิวคลีโอลัสที่เห็นได้ชัด\nพบในมะเร็งเม็ดเลือดขาว/มะเร็งต่อมน้ำเหลืองชนิดทีเซลล์ในผู้ใหญ่ ซึ่งเกี่ยวข้องกับเชื้อไวรัส HTLV-1",
+    "pleomorphicLymphocytes": "ลิมโฟไซต์หลายรูปแบบ (Pleomorphic lymphocytes)",
+    "pleomorphicLymphocytesDescription": "มีความหลากหลายของขนาด รูปร่าง และอัตราส่วนของนิวเคลียสต่อไซโทพลาซึม\nโครมาตินจับตัวกันหลวมกว่าปกติและอาจดูคล้ายบลาสต์\nพบได้บ่อยในมะเร็งต่อมน้ำเหลืองชนิดนอนฮอดจ์กิน, มะเร็งเม็ดเลือดขาวชนิดลิมโฟไซต์เรื้อรังผิดปกติ และมะเร็งเม็ดเลือดขาวชนิดโปรลิมโฟไซต์",
+    "cytoplasmicInclusionsTitle": "อินคลูชันในไซโตพลาซึม"
 }
