--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -175,5 +175,29 @@
     "tagalog": "Tagalo",
     "hindi": "Hindi",
     "thai": "Tailandés",
-    "arabic": "Árabe"
+    "arabic": "Árabe",
+    "subtypesAndVariations": "Subtipos y variaciones morfológicas",
+    "largeGranularLymphocytesLGL": "Linfocitos grandes y granulares (LGL)",
+    "largeGranularLymphocytesLGLDescription": "Más grandes que los linfocitos típicos, presentan citoplasma abundante, azul pálido, con gránulos azurofílicos (lisosomas).\nEl núcleo es ovalado o redondo, con cromatina condensada.\nPueden ser linfocitos T citotóxicos (CD8⁺) o células NK.\nEstán aumentados en infecciones virales, enfermedades autoinmunes, después de la esplenectomía y en la leucemia linfocítica granular.",
+    "reactiveOrActivatedLymphocytes": "Linfocitos reactivos (o activados)",
+    "reactiveOrActivatedLymphocytesDescription": "Células grandes, con cromatina menos condensada y citoplasma basófilo que puede parecer “abrazar” a los eritrocitos.\nTambién llamadas células de Downey tipo II.\nSurgen en respuesta a procesos infecciosos o inflamatorios, como en la mononucleosis infecciosa (virus de Epstein–Barr) y otras infecciones virales.",
+    "neoplasticClonalLymphocytes": "Linfocitos neoplásicos (clonales)",
+    "neoplasticClonalLymphocytesDescription": "Presentan núcleo redondo, cromatina densa y citoplasma escaso.\nRelacionados con neoplasias linfoproliferativas (como LLC, linfomas y mieloma múltiple).\nLa identificación precisa requiere inmunofenotipado por citometría de flujo.",
+    "atypicalLymphocytes": "Linfocitos atípicos",
+    "atypicalLymphocytesDescription": "Engloban formas reactivas, neoplásicas o de malignidad indeterminada.\nPresentan alteraciones morfológicas que no se encuadran en patrones típicos, pudiendo variar en tamaño, forma y relación núcleo-citoplasma.\nSe informan cuando hay sospecha de activación inmunológica intensa, proliferación clonal incipiente o posible transformación neoplásica.\nDeben ser interpretados con cautela y correlacionados con hallazgos clínicos y de laboratorio.",
+    "plasmaCells": "Plasmocitos",
+    "plasmaCellsDescription": "Células derivadas de linfocitos B diferenciados.\nPoseen núcleo excéntrico, cromatina en “rueda de carro” y citoplasma fuertemente basófilo con halo perinuclear (complejo de Golgi).\nNo aparecen en sangre periférica normal.\nPueden surgir en el mieloma múltiple, inflamaciones crónicas o tras la liberación de IL-6.",
+    "lymphocytesWithCleavedNucleus": "Linfocitos con núcleo hendido",
+    "lymphocytesWithCleavedNucleusDescription": "Pequeños, con citoplasma escaso y ligeramente basófilo.\nEl núcleo presenta una hendidura, indentación o fisura.\nSe encuentran en el linfoma folicular (clonal) y en la infección por Bordetella pertussis (reaccional).",
+    "villousLymphocytes": "Linfocitos vellosos",
+    "villousLymphocytesDescription": "Maduros y pequeños, con núcleo ovalado y cromatina compactada.\nEl citoplasma es ligeramente basófilo y presenta vellosidades en uno o ambos extremos.\nAsociados al linfoma de la zona marginal esplénica.",
+    "hairyCells": "Células pilosas",
+    "hairyCellsDescription": "Presentan citoplasma abundante y basófilo con proyecciones citoplasmáticas irregulares (“pelos”).\nNúcleo ovalado, redondo o bilobulado, con cromatina laxa.\nTípicas de la tricoleucemia.",
+    "mottCells": "Células de Mott",
+    "mottCellsDescription": "Plasmocitos que contienen inclusiones esféricas en el citoplasma (vesículas repletas de inmunoglobulinas).\nAparecen en la plasmocitosis reactiva, el mieloma múltiple y los linfomas de células B grandes.",
+    "flowerCells": "Células en flor (Flower cells)",
+    "flowerCellsDescription": "Presentan un núcleo irregular, convoluto, con aspecto de flor.\nAlgunas exhiben nucléolos evidentes.\nSe encuentran en la leucemia/linfoma de células T del adulto, asociadas al virus HTLV-1.",
+    "pleomorphicLymphocytes": "Linfocitos pleomórficos",
+    "pleomorphicLymphocytesDescription": "Presentan variación de tamaño, forma y proporción núcleo-citoplasma.\nLa cromatina es menos condensada y pueden parecer blastos.\nComunes en linfomas no Hodgkin, LLC atípica y leucemia prolinfocítica.",
+    "cytoplasmicInclusionsTitle": "Inclusiones citoplasmáticas"
 }
