--- a/lib/l10n/intl_tl.arb
+++ b/lib/l10n/intl_tl.arb
@@ -175,5 +175,29 @@
     "tagalog": "Tagalog",
     "hindi": "Hindi",
     "thai": "Thai",
-    "arabic": "Arabic"
+    "arabic": "Arabic",
+    "subtypesAndVariations": "Mga subtype at pagkakaiba-ibang morpolohikal",
+    "largeGranularLymphocytesLGL": "Malalaking granular na lymphocytes (LGL)",
+    "largeGranularLymphocytesLGLDescription": "Mas malalaki kaysa sa mga tipikal na lymphocytes, may masaganang cytoplasm na mapusyaw na asul na may mga azurophilic granules (lysosomes).\nAng nucleus ay bilugan o hugis-itlog na may kondensadong chromatin.\nMaaaring mga cytotoxic T lymphocytes (CD8⁺) o NK cells.\nTumataas sa mga viral infection, autoimmune disease, pagkatapos ng splenectomy, at sa granular lymphocytic leukemia.",
+    "reactiveOrActivatedLymphocytes": "Mga reaktibong (o aktibong) lymphocytes",
+    "reactiveOrActivatedLymphocytesDescription": "Malalaking selula na may hindi gaanong kondensadong chromatin at basophilic na cytoplasm na maaaring mukhang 'yumayakap' sa mga pulang selula ng dugo.\nTinatawag ding mga Downey cells type II.\nLumalabas bilang tugon sa mga impeksiyong nakakapagpasiklab, gaya ng nakahahawang mononucleosis (Epstein–Barr virus) at iba pang mga impeksiyong viral.",
+    "neoplasticClonalLymphocytes": "Mga neoplastikong (clonal) lymphocytes",
+    "neoplasticClonalLymphocytesDescription": "May bilugang nucleus, masinsing chromatin at kakaunting cytoplasm.\nKaugnay ng mga neoplasiyang lymphoproliferative (tulad ng CLL, lymphoma at multiple myeloma).\nKinakailangan ang tumpak na pagkilala sa pamamagitan ng immunophenotyping sa pamamagitan ng flow cytometry.",
+    "atypicalLymphocytes": "Mga atypical na lymphocytes",
+    "atypicalLymphocytesDescription": "Kasama ang mga reaktibo, neoplastiko, o may hindi tiyak na kasamaan.\nMay mga pagbabago sa morpolohiya na hindi umaangkop sa mga tipikal na pattern, maaaring mag-iba sa laki, hugis, at ratio ng nucleus sa cytoplasm.\nIniuulat kapag may hinala ng matinding immune activation, paunang clonal proliferation, o posibleng neoplastikong pagbabago.\nDapat suriin nang maingat at kaugnay ng mga natuklasang klinikal at laboratoryo.",
+    "plasmaCells": "Mga plasma cell",
+    "plasmaCellsDescription": "Mga selulang nagmula sa mga B lymphocyte na nag-mature na.\nMay nucleus na nasa gilid, chromatin na parang 'spoke wheel', at cytoplasm na masyadong basophilic na may perinuclear halo (Golgi complex).\nHindi karaniwang nakikita sa dugo ng malulusog na indibidwal.\nMaaaring lumitaw sa multiple myeloma, mga talamak na pamamaga, o pagkatapos ng paglabas ng IL-6.",
+    "lymphocytesWithCleavedNucleus": "Mga lymphocyte na may cleaved nucleus",
+    "lymphocytesWithCleavedNucleusDescription": "Maliit na selula na may kakaunting cytoplasm na bahagyang basophilic.\nAng nucleus ay may bitak, indentation, o hiwa.\nMatatagpuan sa follicular lymphoma (clonal) at impeksiyon ng Bordetella pertussis (reaktibo).",
+    "villousLymphocytes": "Mga villous na lymphocytes",
+    "villousLymphocytesDescription": "Mga mature at maliliit na selula na may oval na nucleus at siksik na chromatin.\nAng cytoplasm ay bahagyang basophilic at may mga villi sa isa o parehong dulo.\nKaugnay ng splenic marginal zone lymphoma.",
+    "hairyCells": "Mga balbon na selula (Hairy cells)",
+    "hairyCellsDescription": "May masaganang basophilic na cytoplasm na may hindi regular na mga projection ('buhok').\nAng nucleus ay maaaring oval, bilog, o bilobado, na may maluwag na chromatin.\nKaraniwan sa hairy cell leukemia.",
+    "mottCells": "Mga selula ni Mott",
+    "mottCellsDescription": "Mga plasma cell na naglalaman ng mga bilugang inclusion sa cytoplasm (mga vesicle na puno ng immunoglobulin).\nNakikita sa reactive plasmacytosis, multiple myeloma, at mga lymphoma ng malalaking B cells.",
+    "flowerCells": "Mga selulang hugis bulaklak (Flower cells)",
+    "flowerCellsDescription": "May hindi regular, kulubot na nucleus na may anyong bulaklak.\nAng ilan ay may malinaw na nucleolus.\nMatatagpuan sa adult T-cell leukemia/lymphoma na nauugnay sa HTLV-1 virus.",
+    "pleomorphicLymphocytes": "Mga pleomorphic na lymphocytes",
+    "pleomorphicLymphocytesDescription": "Ipinapakita ang pagkakaiba-iba sa laki, hugis, at proporsyon ng nucleus at cytoplasm.\nMas hindi kondensado ang chromatin at maaaring magmukhang mga blast.\nKaraniwan sa non-Hodgkin lymphoma, atypical CLL, at prolymphocytic leukemia.",
+    "cytoplasmicInclusionsTitle": "Mga inclusion sa cytoplasm"
 }
